# native-trading-ext

.github/workflows/: build_native_windows.yml
arbitrex/: README_NATIVE_WHEEL.md  pyproject.toml
arbitrex/native/: CMakeLists.txt
native/: README.md
scripts/: local_ci_build.ps1
