[build-system]
requires = [
  "scikit-build-core==0.11.6",
  "setuptools>=61.0",
  "wheel>=0.38.4",
  "pyproject-hooks>=1.0",
]
build-backend = "scikit_build_core.build_backend"

[project]
name = "arbitrex"
version = "0.0.0"
description = "Arbitrex native integration package (C++/pybind11 extensions)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Admin" }]
dependencies = [
  "numpy>=1.23.0",
  "pyarrow>=11.0.0",
  "pybind11>=2.10.0",
  "prometheus_client>=0.15.0",
]

[tool.scikit-build]
# Build CMake project located in the `native` subdirectory
cmake-source-dir = "native"