[build-system]
requires = [
  "scikit-build-core==0.11.6",
  "setuptools>=61.0",
  "wheel>=0.38.4",
  "pyproject-hooks>=1.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "arbitrex"
version = "0.0.0"
description = "Arbitrex native integration package (C++/pybind11 extensions)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Admin" }]
dependencies = [
  "numpy>=1.23.0",
  "pyarrow>=11.0.0",
  "pybind11>=2.10.0",
  "prometheus_client>=0.15.0",
]

[tool.scikit-build]
# Build CMake project located in the `native` subdirectory
# 'cmake' is the correct option name for the CMake source directory.
# 'build-dir' controls the out-of-source build directory used by scikit-build.
# 'sdist' toggles whether to include scikit-build's sdist generation behavior.
cmake = "native"
build-dir = "build"
sdist = true